# johndusel.com

./: .env.example  .gitignore  README.md  RESTORATION.md  connect.sh  docker-compose.yml  justfile
.github/: dependabot.yml
.github/workflows/: deploy.yml  main.yml  push-to-server.yml
backend/: .dockerignore  .example.development.env  .example.env  .example.production.env  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.in  requirements.txt
backend/blog/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/blog/management/commands/: seed_database.py
backend/blog/migrations/: 0001_initial.py  0002_category_post_categories.py  0003_alter_category_options_post_excerpt.py  0004_testimonial.py
backend/blog/static/js/: tinyInject.js
backend/cms/: gunicorn.conf.py  settings.py  test_runner.py  urls.py
backend/uploads/: admin.py  forms.py  models.py  urls.py  views.py
backend/uploads/migrations/: 0001_initial.py
backend/uploads/tests/: tests.py
backend/users/: models.py  serializers.py  tests.py
backend/users/migrations/: 0001_initial.py
caddy/: Caddyfile
deploy/caddy/: johndusel.com.caddy
docs/: STATIC_DEPLOY.md
frontend/: .dockerignore  .env.development  .env.production  .sentryclirc  Dockerfile  README.md  next.config.js  package-lock.json  package.json  sentry.properties  sentry.server.config.ts
frontend/public/: rss.xml
frontend/src/components/: Categories.tsx  Date.tsx  Footer.tsx  Hero.tsx  LatestPosts.tsx  Navbar.tsx  PostMeta.tsx  Posts.tsx  Testimonial.tsx  (+1 more)
scripts/: build-static.sh
(+21 files in other folders)
